# AI_solo_coder_task_A_149

./: README.md
backend/: CMakeLists.txt
backend/include/: clickhouse_client.h  http_api_server.h  mqtt_alert_manager.h  trebuchet_physics.h  udp_sensor_receiver.h
backend/src/: alarm_mqtt_module.cpp  clickhouse_client.cpp  http_api_server.cpp  main.cpp  mqtt_alert_manager.cpp  range_predictor_module.cpp  spring_simulator_module.cpp  trebuchet_physics.cpp  udp_receiver_module.cpp  udp_sensor_receiver.cpp
database/: init_clickhouse.sql
frontend/: index.html
frontend/js/: app.js  physics.js  spring-animation.js
simulator/: trebuchet_sensor_simulator.py
